0.004 2023-11-30
  [Requrement Changes]
    * Require SPVM::Sys 0.504.
  [Incompatible Changes]
    * Remove Time::HiRes::Util. This utilities are moved to Sys::Time::Util.
0.003 2023-11-27
  [Bug Fix]
    * Fix many floating seconds bugs.
  [Test Improvement]
    * Fix and add many tests.
0.002 2023-11-27
  [Incompatible Changes]
    * Implement the time method in the Time::HiRes class.
  [Document Improvement]
    * Improve the doc.
0.001 2023-11-27
  [Changes]
    * First release.
  